feat: introduce Bitki API controller, update database connection string, and modify Index Blazor component.

--- a/frontend/Bitki.Blazor/Components/Pages/Index.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/Index.razor
@@ -73,7 +73,7 @@ else
     {
         try
         {
-            plants = await Http.GetFromJsonAsync<List<Bitki.Blazor.Models.Plant>>("api/plants");
+            plants = await Http.GetFromJsonAsync<List<Bitki.Blazor.Models.Plant>>("api/bitki");
         }
         catch
         {
