--- a/frontend/Bitki.Blazor/Components/Layout/NavMenu.razor
+++ b/frontend/Bitki.Blazor/Components/Layout/NavMenu.razor
@@ -64,5 +64,38 @@
                 <span class="bi bi-geo-alt-fill" aria-hidden="true"></span> İlçe
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <span class="text-light small text-uppercase px-3">Etnobotanik</span>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="etnobitkilit">
+                <span class="bi bi-book-half" aria-hidden="true"></span> Literatür
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="etnokullanim">
+                <span class="bi bi-basket" aria-hidden="true"></span> Kullanım
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="etnolokalite">
+                <span class="bi bi-pin-map-fill" aria-hidden="true"></span> Lokalite
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <span class="text-light small text-uppercase px-3">Referanslar</span>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="kullanim">
+                <span class="bi bi-tags-fill" aria-hidden="true"></span> Kullanım Tipleri
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="kisiler">
+                <span class="bi bi-people-fill" aria-hidden="true"></span> Kişiler
+            </NavLink>
+        </div>
     </nav>
 </div>
