--- a/frontend/Bitki.Blazor/Components/Layout/NavMenu.razor
+++ b/frontend/Bitki.Blazor/Components/Layout/NavMenu.razor
@@ -136,5 +136,29 @@
                 <span class="bi bi-gear-fill" aria-hidden="true"></span> Yöntem
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <span class="text-light small text-uppercase px-3">Bileşikler</span>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="bilesikler">
+                <span class="bi bi-heptagon-fill" aria-hidden="true"></span> Bileşikler
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="bitkibilesik">
+                <span class="bi bi-flower2" aria-hidden="true"></span> Bitki-Bileşik
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="literaturbilesik">
+                <span class="bi bi-journal-medical" aria-hidden="true"></span> Lit-Bileşik
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ucucuyagbilesik">
+                <span class="bi bi-droplet-half" aria-hidden="true"></span> Uçucu Yağ
+            </NavLink>
+        </div>
     </nav>
 </div>
